--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0027)https://eg2026.onpe.gob.pe/ -->
+
 <html lang=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +33,7 @@
 <header class="site-header" role="banner">
     <div class="flex wrapper-flex flex-between column-reverse-mobile">
         <a class="site-title" rel="author" href="https://eg2026.onpe.gob.pe/">
-            <img src="./Elecciones Generales 2026_files/logo-onpe.svg">
+            <img src="./Elecciones Generales 2026_files/logo-MRE.png">
         </a>
         <div class="content-counter">
             <p class="counter-title">Faltan:</p>
@@ -84,7 +84,7 @@
     <div class="wrapper m-top-60">
         <section class="banner-hero">
             <div class="container-left">
-                <h1 class="title">Elecciones Generales 2026</h1>
+                <h1 class="title">Tu voto cruza fronteras</h1>
                 <p class="description">
                     Todo lo que debes saber sobre las elecciones a realizarse el 12 de abril de 2026.
                 </p>
